# state.io

./: CMakeLists.txt  a.out  main.c
include/: linkedlist.h  map.h  menu.h  player.h  potion.h
lib/: linkedlist.c  map.c  menu.c  player.c  potion.c
