cmake_minimum_required(VERSION 3.16)
project("Sample SDL project")
include_directories("/usr/include/SDL2")
include_directories("/home/maedeh/Downloads/sdlfinal/SDL/include")
add_executable(main ./lib/map.c ./lib/player.c ./lib/linkedlist.c ./include/map.h ./include/player.h ./include/linkedlist.h main.c)
target_link_libraries(main m SDL2 SDL2_gfx SDL2_ttf SDL2_image) 
target_include_directories(main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lib)
configure_file(padmaa.ttf ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(potion1.png ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(potion2.png ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(potion3.png ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(potion4.png ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(potion5.png ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)